--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 congrats!  you are smart. but your work is not done. save youself. save the collaboration. <br>
 <br>
-<br>
+<a href="leaderboard.html">leaderboard</a> <br>
 <br>
 <br>
 <br>
