added line breaks

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,7 +1,8 @@
-Leaderboard:
-
-1. Nobody
-2. Nobody
-3. Nobody
-
-<a href="index.html">back</a>
+Leaderboard:<br>
+<br>
+1. Nobody<br>
+2. Nobody<br>
+3. Nobody<br>
+<br>
+<a href="index.html">back</a><br>
+<br>
