--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-congrats!  you are smart. but your work is not done. save youself. save the collaboration. remember, the key lies in naming the father of the numbers<br>
+congrats!  you are smart. but your work is not done. save youself. save the collaboration. remember, the key lies in naming the father of the numbers.<br>
 <br>
 <a href="leaderboard.html">leaderboard</a> <br>
 <br>
